--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
     "electron": "5.0.5"
   },
   "dependencies": {
-    "fs-extra": "^8.0.1",
+    "@sentry/electron": "^0.17.1",
     "axios": "^0.19.0",
     "execa": "^1.0.0",
+    "fs-extra": "^8.0.1",
     "socket.io-client": "^2.2.0",
     "sqlite3": "^4.0.9",
     "typescript": "^3.5.2",
