--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "Launcher Front End",
   "scripts": {
     "start": "react-scripts start",
-    "build" : "react-scripts build"
+    "build": "react-scripts build"
   },
   "author": "GitHub",
   "license": "CC0-1.0",
@@ -15,6 +15,8 @@
     "cpy-cli": "^2.0.0"
   },
   "dependencies": {
+    "@sentry/browser": "^5.4.3",
+    "axios": "^0.19.0",
     "bottlejs": "^1.7.2",
     "framework7": "^4.0.0",
     "framework7-icons": "^2.2.0",
@@ -23,8 +25,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
-    "typescript": "^3.5.2",
-    "axios": "latest"
+    "typescript": "^3.5.2"
   },
   "browserslist": [
     ">0.2%",
