--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "execa": "^1.0.0",
     "fs-extra": "^8.0.1",
+    "node-notifier": "^5.4.0",
     "socket.io-client": "^2.2.0",
     "sqlite3": "^4.0.9",
     "typescript": "^3.5.2",
